--- a/Angular/proyectoFinal/src/app/paginas/profile-student/profile-student.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/profile-student/profile-student.component.html
@@ -30,13 +30,12 @@
     </form>
 </div> -->
 
-<div class="container align-items-center vh-100">
+<div class="general-box align-items-center ">
   <div class="edit-profile">
     <div class="text-center">
       <h1>Editar Perfil</h1>
     </div>
-    <hr>
-    <div class="row justify-content-center  vh-100">
+    <div class="row justify-content-center  ">
       <!-- left column -->
       <div class="col-4">
         <div class="text-center">
