--- a/Angular/proyectoFinal/src/app/paginas/student-page/student-page.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/student-page/student-page.component.html
@@ -5,13 +5,13 @@
   <div class="noRankJoinNew">
     <div class="noRankingsContainer">
       <ng-container *ngIf="rankings.length == 0; else rankingList">
-        <h2>¡Ups! 😰</h2><br />
+        <h2>¡Ups! 😰</h2><br/>
         <p class="no-rankings-message">
           <span>{{ mensajeNoRankings }}</span>
         </p>
-        <!-- <div class="roboimage">
+         <!-- <div class="roboimage">
                 <img src="https://i.imgur.com/M7t09Un.png" alt="Imagen de robot">
-              </div> -->
+              </div>  -->
         <div class="mainimageContainer">
           <div class="imageContainer">
             <img src="https://i.imgur.com/Hx7TLZp.png" alt="">
@@ -33,14 +33,26 @@
   <ng-template #rankingList>
     <h2 class="rankings-message">Estas matriculado en los siguientes rankings:</h2>
     <section id="destacados" class="destacados">
-
         <div class="rankingcito" *ngFor="let ranking of rankings">
           <div class="contencito">
             <h3>{{ ranking.name }}</h3>
             <button (click)="verRanking(ranking.id)" type="button" class="btn btn-outline-info">Ver Ranking</button>
           </div>
-          <!-- <img [src]="ranking.image" alt=""> -->
+           <img [src]="ranking.image" alt="">
         </div>
+        <div class="rankingcito" *ngFor="let ranking of rankings">
+          <div class="contencito">
+            <h3>{{ ranking.name }}</h3>
+            <button (click)="verRanking(ranking.id)" type="button" class="btn btn-outline-info">Ver Ranking</button>
+          </div>
+           <img [src]="ranking.image" alt="">
+        </div>        <div class="rankingcito" *ngFor="let ranking of rankings">
+          <div class="contencito">
+            <h3>{{ ranking.name }}</h3>
+            <button (click)="verRanking(ranking.id)" type="button" class="btn btn-outline-info">Ver Ranking</button>
+          </div>
+           <img [src]="ranking.image" alt="">
+        </div>    
     </section>
   </ng-template>
   <button class ="btn btn-danger closesesion"(click)="onLogoutClick()">Cerrar sesión</button>
